Added screen orientation to be fixed to portrait

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.Cs5520mobiledev">
         <activity
             android:name=".FindPrimeActivity"
-            android:exported="false" />
+            android:exported="false" android:screenOrientation="portrait" />
         <activity
             android:name=".AboutMeActivity"
             android:exported="false" />
