--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,12 @@
         android:theme="@style/Theme.Cs5520mobiledev">
         <activity
             android:name=".LocationSensingActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".FindPrimeActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+             />
         <activity
             android:name=".AboutMeActivity"
             android:exported="false" />
